objects/zkusps__CustomsItem__c.object
<CustomObject>
    <customHelpPage>zkusps__InternationalShipmentHelp</customHelpPage>
    <fields>
        <fullName>zkusps__countryOfOrigin__c</fullName>
        <label>Country of Origin</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__description__c</fullName>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__hsTariffNumber__c</fullName>
        <description>6-digit HS tariff number</description>
        <inlineHelpText>6-digit HS tariff number</inlineHelpText>
        <label>HS Tariff Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__quantity__c</fullName>
        <description>This is an optional field. If specified, this will be the default value assigned to the Customs Items list when the Customs Item is selected in the Shipping Wizard.</description>
        <inlineHelpText>This is an optional field. If specified, this will be the default value assigned to the Customs Items list when the Customs Item is selected in the Shipping Wizard.</inlineHelpText>
        <label>Default Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkusps__value__c</fullName>
        <description>The value of a single unit of the customs Item. Specified in U.S. Dollars</description>
        <inlineHelpText>The value of a single unit of the customs Item. Specified in U.S. Dollars</inlineHelpText>
        <label>Value per Unit (USD)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkusps__weightOunces__c</fullName>
        <description>The ounces portion of the weight, for a single unit of the customs Item.</description>
        <inlineHelpText>The ounces portion of the weight, for a single unit of the customs Item.</inlineHelpText>
        <label>Weight per Unit (Ounces)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkusps__weightPounds__c</fullName>
        <description>The pounds portion of the weight, for a single unit of the customs Item.</description>
        <inlineHelpText>The pounds portion of the weight, for a single unit of the customs Item.</inlineHelpText>
        <label>Weight per Unit (Pounds)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkusps__zkModKey__c</fullName>
        <label>ZK Mod Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>USPS Customs Item</label>
    <listViews>
        <fullName>zkusps__All</fullName>
        <columns>NAME</columns>
        <columns>zkusps__description__c</columns>
        <columns>zkusps__countryOfOrigin__c</columns>
        <columns>zkusps__weightPounds__c</columns>
        <columns>zkusps__weightOunces__c</columns>
        <columns>zkusps__value__c</columns>
        <columns>zkusps__hsTariffNumber__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customs Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>USPS Customs Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>